plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
	id 'jacoco'
}

group = 'ca.mcgill.ecse321'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
	testLogging {
		exceptionFormat "full"
		events "passed", "failed"
	}
	finalizedBy jacocoTestReport
}

tasks.named('jacocoTestReport') {
	dependsOn test
}

task integrationTest(type: Test){
	include '**/ca/mcgill/ecse321/hotelsystem/integration/*'
	useJUnitPlatform()
	testLogging {
//		exceptionFormat "full"
		events "failed", "skipped", "passed"
	}
}
